[rename]APIの名前 [fix]typo [fix]インスタンスをいじるのをやめた
